--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
+    <script src="date.js"></script>
     <title>js-calculator-time-clock</title>
 </head>
 <body>
