added date code link with html and fix

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="styles.css">
+    <script src="date.js" defer></script>
     <script src="index.js" defer></script>
-    <script src="date.js"></script>
     <title>js-calculator-time-clock</title>
 </head>
 <body>
 
 </body>
-</html>
+</html><!---->
