--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="styles.css">
-    <script src="date.js" defer></script>
-    <script src="index.js" defer></script>
-    <title>js-calculator-time-clock</title>
+    <title> Clock and Date</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
+    <div id="clock"></div>
+    <div id="date"></div>
+    <button id="toggleFormat">Switch to 24-Hour</button>
+</div>
 
+<script src="clock.js"></script>
+<script src="date.js"></script>
 </body>
-</html><!---->
+</html>
